--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
-    "mongoose": "^4.5.10"
+    "mongoose": "^4.5.10",
+    "morgan": "^1.7.0"
   }
 }
