--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,9 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "mongoose": "^4.5.10",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0"
   }
 }
