--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-http": "^0.3.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "cors": "^2.7.1"
   }
 }
