--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.0",
     "express": "^4.14.0",
     "mongoose": "^4.5.10",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-http": "^0.3.0",
-    "passport-local": "^1.0.0",
-    "cors": "^2.7.1"
+    "passport-local": "^1.0.0"
   }
 }
